--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 3B5D3A         # Forest green
+  primary-rgb: "59,93,58"
+  secondary: C2B280       # Khaki / desert tan
+  secondary-dark: 8B7B5C  # Olive brown
 
 # Footer settings
 footer:
